# Shelf

./: .gitignore  LICENCE  README.md  build.sh  debug.sh  install.sh
bridge/: shelf_core.h
core/: Cargo.toml
core/src/: clip.rs  icon.rs  lib.rs  main.rs  store.rs
resources/: Info.plist
src/: AppDelegate.swift  ClipItem.swift  ClipStore.swift  PasteboardMonitor.swift  Settings.swift  ShelfPanel.swift  ShelfView.swift
