[package]
name = "shelf-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "shelf-icon"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
resvg = "0.43"
tiny-skia = "0.11"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
